# R-type

./: README.txt  rfc.txt
EntityComponentSystem/lib/: CMakeLists.txt  Papillon.cpp  Papillon.hpp  ecs
Network/: CrossPlatformSockets.hpp  IServerSocket.hpp  ISocket.hpp
Network/headers/Unix/: SfmlSocket.hpp  UnixServerSocket.hpp  UnixSocket.hpp
Network/headers/Windows/: SfmlSocketWindows.hpp  WindowsServerSocket.hpp  WindowsSocket.hpp
Network/src/Unix/: SfmlSocket.cpp  UnixServerSocket.cpp  UnixSocket.cpp
Network/src/Windows/: SfmlSocketWindows.cpp  WindowsServerSocket.cpp  WindowsSocket.cpp
Protocol/: ARequest.cpp  ARequest.hpp  IRequest.hpp  Protocol.hpp  Serializer.cpp  Serializer.hpp  Vertex.cpp  Vertex.hpp
Protocol/headers/: CreateGame.hpp  DeleteEntity.hpp  JoinGame.hpp  JoinLobby.hpp  LeaveGame.hpp  ListGame.hpp  Login.hpp  MoveEntity.hpp  NewEntity.hpp  PlayerAccepted.hpp  PlayerEntered.hpp  PlayerLeaved.hpp  PlayerMove.hpp  Response.hpp
Protocol/src/: CreateGame.cpp  DeleteEntity.cpp  JoinGame.cpp  JoinLobby.cpp  LeaveGame.cpp  ListGame.cpp  Login.cpp  MoveEntity.cpp  NewEntity.cpp  PlayerAccepted.cpp  PlayerEntered.cpp  PlayerLeaved.cpp  PlayerMove.cpp  Response.cpp
client/: CMakeLists.txt
client/cmake_modules/: FindSFML.cmake
client/inc/: Bullet.hpp  Client.hpp  CreateGameMenu.hpp  EditSkinsMenu.hpp  EntityManager.hpp  Factory.hpp  Game.hpp  GameScene.hpp  Human.hpp  IClientEntity.hpp  IEvent.hpp  IFactory.hpp  IFont.hpp  IGraphicalEngine.hpp  IMainScene.hpp  IMenuScene.hpp  IResourceManager.hpp  IScene.hpp  ISound.hpp  ISoundEngine.hpp  ISprite.hpp  JoinGameMenu.hpp  Loading.hpp  LobbyMenu.hpp  LoginMenu.hpp  MainMenu.hpp  MenuScene.hpp  Monster.hpp  MovableBackground.hpp  Obstacle.hpp  Player.hpp  SFML.hpp  SFMLFont.hpp  SFMLGameEvent.hpp  SFMLMenuEvent.hpp  SFMLMenuText.hpp  SFMLResourceManager.hpp  SFMLSound.hpp  SFMLSoundEngine.hpp  SFMLSprite.hpp
client/src/: Bullet.cpp  Client.cpp  CreateGameMenu.cpp  EditSkinsMenu.cpp  EntityManager.cpp  Factory.cpp  Game.cpp  GameScene.cpp  Human.cpp  JoinGameMenu.cpp  Loading.cpp  LobbyMenu.cpp  LoginMenu.cpp  MainMenu.cpp  MenuScene.cpp  Monster.cpp  MovableBackground.cpp  Obstacle.cpp  Player.cpp  SFML.cpp  SFMLFont.cpp  SFMLGameEvent.cpp  SFMLMenuEvent.cpp  SFMLMenuText.cpp  SFMLResourceManager.cpp  SFMLSound.cpp  SFMLSoundEngine.cpp  SFMLSprite.cpp  main.cpp  tmpmain.cpp
server/: CMakeLists.txt  notes.txt
server/ecs/: Bullet.cpp  Bullet.hpp  Entity.cpp  Entity.hpp  Human.cpp  Human.hpp  IEntity.hpp  Monster.cpp  Monster.hpp  Obstacle.cpp  Obstacle.hpp
server/ecs/components/: AMovable.cpp  AMovable.hpp  Controlable.cpp  Controlable.hpp  IComponent.hpp  Movable.cpp  Movable.hpp  Shootable.cpp  Shootable.hpp
server/ecs/systems/: CollisionSystem.cpp  CollisionSystem.hpp  ControlSystem.cpp  ControlSystem.hpp  ISystem.hpp  MoveSystem.cpp  MoveSystem.hpp  ShootSystem.cpp  ShootSystem.hpp
server/headers/: Game.hpp  LibLoader.hpp  Player.hpp  SafeQueue.hpp  Server.hpp  Spawner.hpp
server/headers/clock/: CrossPlatformClock.hpp  IClock.hpp  UnixClock.hpp
server/headers/entities/: ABullet.hpp  AEntity.hpp  Bullet.hpp  IEntity.hpp
server/headers/fileSystem/: CrossPlatformFs.hpp  IFs.hpp  UnixFs.hpp
server/headers/mutex/: CrossPlatformMutex.hpp  IMutex.hpp  UnixMutex.hpp
server/headers/threads/: CrossPlatformThreads.hpp  IThreads.hpp  UnixThreads.hpp
server/src/: Game.cpp  LibLoader.cpp  Player.cpp  Server.cpp  Spawner.cpp  main.cpp
server/src/clock/: UnixClock.cpp
server/src/entities/: ABullet.cpp  AEntity.cpp  Bullet.cpp
server/src/fileSystem/: UnixFs.cpp
server/src/mutex/: UnixMutex.cpp
server/src/threads/: UnixThreads.cpp
unit_test/mutex/: main.cpp
unit_test/mutex/header/mutex/: IMutex.hpp  UnixMutex.hpp
unit_test/mutex/header/threads/: IThreads.hpp
unit_test/mutex/src/mutex/: UnixMutex.cpp
unit_test/mutex/src/threads/: UnixThreads.cpp
unit_test/thread/: main.cpp
unit_test/thread/header/threads/: UnixThreads.hpp
